classDiagram

class Iphone{
  }

  class ReprodutorMusical{
    +void tocar()
    +void pausar()
    +void selecionarMusica(String musica)
  }

  class AparelhoTelefonico {
    +void ligar(String numero)
    +void atender()
    +iniciarCorreioVoz()
  }

  class NavegadorInternet {
    +void exibirPagina(String url)
    +void adicionarNovaAba()
    +void atualizarPagina()
  }

Iphone <|-- ReprodutorMusical
Iphone <|-- AparelhoTelefonico
Iphone <|-- NavegadorInternet
